--- a/index.html
+++ b/index.html
@@ -1,24 +1,72 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1"/>
-        <title>Mi primera App</title>
-    </head>
-    <body>
-        <header>
-            <h1>Hola Mundo :)</h1>
-        </header>
-            <nav>
-                <a href="">Inicio</a>
-                <a href="">Quienes somos</a>
-            </nav>
-            <section><p>Galeria de imagenes</p></section>
-            <main>
-                <p>Noticias</p>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Mi primeran App</title>  
+</head>
+<body>
+    <header>
+        <section class="logo">
+            <img src="../App1/imagenes/logo.png" style="width: 140px; height: 90px" alt="" />
+            <div style="float: right">
+                <a class="nav-link js-srcoll" href="#">Registro</a> | <a href="#">Inicio</a>    
+                <div class="input-group rounded">
+                    <input type="search" class="form-control rounded" placeholder="Buscar" aria-label="Search" aria-describedby="search-addon" />
+                    <span class="input-group-text border-0" id="search-addon">
+                      <i class="fas fa-search"></i>
+                    </span>
+                  </div>    
+            </div>
+        </section>
+    </header>
+    <div align ="center">
+        <nav>
+            <a href="">Inicio</a>
+            <a href="">Servicios</a>
+            <a href="">Portafolio</a>
+            <a href="">Clientes</a>
+            <a href="">Contactos</a>
+        </nav>
+        <div class="slider">
+           <h2 class="TituloG">Galeria de Imagenes</h2>
+    </div>
+<div class="carousel-inner">
+  <div class="carousel-item active">
+    <img
+      src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp"/>
+  
+  <div class="carousel-item">
+    <img
+      src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp"/>
+
+  <div class="carousel-item">
+    <img
+      src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(23).webp"/>
+  </div>
+    <main>
+                <div class="noticia_uno">
+                    <h2>Noticia 1</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    
+                </div>
+                <div class="noticia_dos">
+                    <h2>Noticia 2</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                </div>
             </main>
-            <footer><h6>Pie de pagina</h6></footer>
-        </header>
-    </body>
+    <section class="sponsors">
+        <h2 class="sponsors">Sponsors</h2>
+        <img src="" alt="Sponsor 1">
+        <img src="" alt="Sponsor 2">
+        <img src="" alt="Sponsor 3">
+        <img src="" alt="Sponsor 4">
+        <img src="" alt="Sponsor 5">
+    </section>
+    <footer>PIE DE PAGINA</footer>
+</body>
 </html>
     
